--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "be-nc-news",
   "version": "1.0.0",
   "description": "bc-nc-news",
-  "main": "index.js",
+  "main": "app-listen.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
@@ -20,18 +20,16 @@
     "url": "https://github.com/northcoders/be-nc-news/issues"
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
-  "devDependencies": {
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "husky": "^8.0.3",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
     "jest-sorted": "^1.0.15",
+    "pg": "^8.13.1",
     "pg-format": "^1.0.4",
     "supertest": "^7.0.0"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.21.1",
-    "pg": "^8.7.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
