--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "bc-nc-news",
   "main": "app-listen.js",
   "scripts": {
+    "start": "node app-listen.js",
+    "seed-prod": "NODE_ENV=production npm run seed",
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
